--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                       <li>Windows built architecture using services, registry, and DLLs</li>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">November 2018 to Current</span>
+                      <span class="text-primary">November 2018 to 2021</span>
                   </div>
               </div>
 
@@ -254,7 +254,7 @@
                   </div>
                   <div class="resume-date text-md-right">
                     <span class="text-primary">Summers Full-Time</span></br>
-                      <span class="text-primary">June 2019 to August 2021</span>
+                      <span class="text-primary">June 2019 to August 2022</span>
                   </div>
               </div>
 
@@ -298,6 +298,7 @@
                           <div class="subheading">HTML &amp; CSS &amp; JS</div>
                           <div>3 years of experience</div>
                       </div>
+
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
                               <li class="list-inline-item">
@@ -307,16 +308,18 @@
                           <div class="subheading">Python</div>
                           <div>2 years of experience</div>
                       </div>
+
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
                               <li class="list-inline-item">
-                                  <i class="fab fa-wordpress"></i>
+                                <i class="fa-solid fa-database"></i>
                               </li>
                           </ul>
-                          <div class="subheading">WordPress</div>
-                          <div>3 years of <a href="https://webstrive.net/" target="_blank"> experience</a></div>
+                          <div class="subheading">MySQL, SQLite, MongoDB</div>
+                          <div>3 years of experience</div>
                       </div>
                   </div>
+
                   <div class="row mb-5">
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
@@ -327,6 +330,7 @@
                           <div class="subheading">Visual Basic &amp; VBA</div>
                           <div>5 years of experience</div>
                       </div>
+
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
                               <li class="list-inline-item">
@@ -336,6 +340,7 @@
                           <div class="subheading">C & C++</div>
                           <div>5 years of experience</div>
                       </div>
+                      
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
                               <li class="list-inline-item">
