--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                     <h3 class="mb-0">Academic Projects</h3>
-                    <div class="subheading mb-3">Linux File System Driver</div>
-                    <li>Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
-                    <li>Built a Python and Flask ecommerce site from scratch, which allowed buyers to purchase products from sellers, sellers to publish products, buyers to navigate and search products, and more. </li>
+                    <li>Linux File System Driver - Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
+                    <li>Flask Ecommerce Site - Built a Python and Flask ecommerce site from scratch, which allowed buyers to purchase products from sellers, sellers to publish products, buyers to navigate and search products, and more. </li>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Ongoing Developments</span>
@@ -129,7 +128,7 @@
                       <h3 class="mb-0">Penny Helper   <a href="https://github.com/EIGpennyhelper" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></h3>
                       <li>Learned how to manage time and meet goals using tools such as Ghannt and Milestone charts</li>
                       <li>Technically documented the code and documents to peers and supervisors</li>
-                      <li>Deployed software designed to mine cryptocurrency on users idle periods</li>
+                      <li>Deployed software designed to mine Ethereum and Monero on users idle periods</li>
                       <li>Streamlined the cryptocurrency mining process for nonprofits benefit</li>
                   </div>
                   <div class="resume-date text-md-right">
@@ -154,9 +153,9 @@
              <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                 <div class="resume-content">
                     <h3 class="mb-0">Local Businesses</h3>
-                    <div class="subheading mb-3"><a href="https://www.webstrive.net" target="_blank">Professional Website Creator</a></div>
-                    <li>Designed and created a <a href="https://ready2launchnow.com/" target="_blank">website</a> for a local client in Berks, PA</li>
-                    <li>Currently designing a <a href="https://brunosoflititz.com/" target="_blank">website</a> for a local client in Lititz, PA</li>
+                    <div class="subheading mb-3">Professional Website Creator</div>
+                    <li>Designed and created a website for a life coach in Berks, PA</li>
+                    <li>Designed and created a website for a local hoagie shop in Lititz, PA</li>
                     <li>Gained knowledge on client-contractor relationships while practicing web development skills and meeting deadlines</li>
                 </div>
                 <div class="resume-date text-md-right">
@@ -164,7 +163,6 @@
                 </div>
              </div>
 
-             
           </div>
       </section>
 
@@ -195,7 +193,7 @@
                     <h3 class="mb-0">Berks Career and Technology Center</h3>
                     <div class="subheading mb-3">Information Technology - Programming</div>
                     <li>Learned proper software development procedures and practices</li>
-                    <li>Emulated industry environments with team-based assignments and peer criticism</li>
+                    <li>Emulated industry environments with team-based assignments and code reviews</li>
                     <li>Hands-on experience and learning working with computer hardware</li>
                     <li>Skills USA Member and competitor</li>
                 </div>
@@ -340,7 +338,7 @@
                           <div class="subheading">C & C++</div>
                           <div>5 years of experience</div>
                       </div>
-                      
+
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
                               <li class="list-inline-item">
