--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                     <li>Rigorous work done with data structures and algorithms such as graphs, heaps, divide and conquer, greedy algorithms, dynamic programming, linear programming, and analysis through proofs</li>
                     <li>Experience solving and constructing Lambda Calculus and Scheme, Finate Automata (DFA, NFA, GNFA), Context Free Grammar / Pushdown Automata, and Turing Machines</li>
                     <li>Knowledge and interest in parallel, distributed, and hybrid computation. Familiar with OpenMP and MPI libraries as well as standard threading</li>
+                    <li>About to start learning: Operating Systems and App Development</li>
                     <li>Multiple semester Deans List recipient</li>
                 </div>
                 <div class="resume-date text-md-right">
@@ -241,7 +242,7 @@
 
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
-                      <h3 class="mb-0">Information Technology Technician</h3>
+                      <h3 class="mb-0">Information Technology, Jr. Systems Engineer Intern</h3>
                       <div class="subheading mb-3">Rosenberger of North America LLC, Akron PA</div>   
                         <li>Migrated and created SharePoint Online site structure and permissions for GCC tenant. 
                             Used tools such as SharePoint Migration Tool, SharePoint Designer, SharePoint Admin Portal, and A.D.</li>
