--- a/index.html
+++ b/index.html
@@ -114,12 +114,49 @@
 
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
-                    <h3 class="mb-0">Academic Projects</h3>
-                    <li>Linux File System Driver - Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
-                    <li>Flask Ecommerce Site - Built a Python and Flask ecommerce site from scratch, which allowed buyers to purchase products from sellers, sellers to publish products, buyers to navigate and search products, and more. </li>
+                    <h3 class="mb-0">AR Solar System Simulator</h3>
+                    <li>Actively maintaining an AR simulator designed for educating about our solar system</li>
+                    <li>Streamlined a responsive AR to allow the user to maneuver their camera around and observe a 3D selected planet</li>
+                    <li>Enabled users to see generic information from NASA about each planet as education is a focal point of the project</li>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">Ongoing Developments</span>
+                    <span class="text-primary">Aug. 2022 – Present</span>
+                </div>
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Parallel Programming Research Project</h3>
+                    <li>Led a team project investigating methods of parallelizing Dijkstra’s and the Bellman-Ford algorithm</li>
+                    <li>Created the graph data structure, model data generator, unit tests, integration tests, performance metric tests, and the entire Dijkstra portion</li>
+                    <li>Steered the integration of the Bellman-Ford algorithm into the analysis execution</li>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">Jan. 2022 – May. 2022</span>
+                </div>
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">E-Commerce - Nittany Market</h3>
+                    <li>Built a mock E-Commerce site from scratch utilizing Python and Flask</li>
+                    <li>Provided the abilities for buyers to purchase products from sellers, sellers to publish products, buyers to query results from categories search products, and more</li>
+                    <li>Facilitated the ability for buyers to create an account, change their password, and request seller access</li>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">Jan. 2022 – May. 2022</span>
+                </div>
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Linux File System Driver</h3>
+                    <li>Constructed a file system driver that interfaced between a simulator and the disk controller on a local server</li>
+                    <li>Imitated an OS file system that could perform open, close, read, write, and seek operations on existing files or create and maintain new files</li>
+                    <li>Implemented an LRU cache for data access efficiency while using several diverse workloads for output validation</li>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">August 2021 – December 2021</span>
                 </div>
               </div>
 
@@ -132,7 +169,7 @@
                       <li>Streamlined the cryptocurrency mining process for nonprofits benefit</li>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">Ongoing maintenance and development</span>
+                      <span class="text-primary">Sep. 2018 – Dec. 2020</span>
                   </div>
               </div>
 
@@ -181,7 +218,8 @@
                     <li>Rigorous work done with data structures and algorithms such as graphs, heaps, divide and conquer, greedy algorithms, dynamic programming, linear programming, and analysis through proofs</li>
                     <li>Experience solving and constructing Lambda Calculus and Scheme, Finate Automata (DFA, NFA, GNFA), Context Free Grammar / Pushdown Automata, and Turing Machines</li>
                     <li>Knowledge and interest in parallel, distributed, and hybrid computation. Familiar with OpenMP and MPI libraries as well as standard threading</li>
-                    <li>About to start learning: Operating Systems and App Development</li>
+                    <li>Knowledge about OS from Parallelization, Memory Allocation (Buddy and Slab algorithms), and Virtual Memory Management</li>
+                    <li>Hands on experience creating several full-scale iOS applications and maintaining one on the Apple App Store</li>
                     <li>Multiple semester Deans List recipient</li>
                 </div>
                 <div class="resume-date text-md-right">
@@ -226,6 +264,30 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
           <div class="w-100">
               <h2 class="mb-5">Experience</h2>
+
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Information Technology, Jr. Systems Engineer Intern</h3>
+                    <div class="subheading mb-3">Rosenberger of North America LLC, Akron PA</div>
+                    <li>Deployed Manage Engine servers and services which improved SysAdmin automation by 80%</li>   
+                    <li>Automated workflows to accurately maintain licenses of users which saved the company 30% on costs</li>
+                    <li>Administered vSphere environment across two sites and was on the disaster recovery team</li>
+                    <li>Mediated VM and service downtime for all critical infrastructure failure during unexpected outages</li>
+                    <li>Maintained Active Directory and was a global admin on the companies federated government GCC O356 tenant</li>
+                      <li>Migrated and created SharePoint Online site structure and permissions for GCC tenant. 
+                          Used tools such as SharePoint Migration Tool, SharePoint Designer, SharePoint Admin Portal, and A.D.</li>
+                      <li>Built MDT Server, created DHCP Policies, and site Gold Images for computer imaging</li>
+                      <li>Created in-depth technical procedures and documentation</li>
+                      <li>Maintained the company ticket system to help resolve user issues or requests</li> 
+                </div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">Summers Full-Time</span></br>
+                    <span class="text-primary">June 2019 to August 2022</span>
+                </div>
+            </div>
+
+
+
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
                       <h3 class="mb-0">Independent Contractor</h3>
@@ -237,36 +299,6 @@
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">November 2018 to 2021</span>
-                  </div>
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                  <div class="resume-content">
-                      <h3 class="mb-0">Information Technology, Jr. Systems Engineer Intern</h3>
-                      <div class="subheading mb-3">Rosenberger of North America LLC, Akron PA</div>   
-                        <li>Migrated and created SharePoint Online site structure and permissions for GCC tenant. 
-                            Used tools such as SharePoint Migration Tool, SharePoint Designer, SharePoint Admin Portal, and A.D.</li>
-                        <li>Built MDT Server, created DHCP Policies, and site Gold Images for computer imaging</li>
-                        <li>Upgraded or replaced computer hardware to meet company standards</li>
-                        <li>Created in-depth technical procedures and documentation</li>
-                        <li>Maintain ticket system to help resolve user issues or requests</li> 
-                  </div>
-                  <div class="resume-date text-md-right">
-                    <span class="text-primary">Summers Full-Time</span></br>
-                      <span class="text-primary">June 2019 to August 2022</span>
-                  </div>
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                  <div class="resume-content">
-                      <h3 class="mb-0">Grocery Clerk</h3>
-                      <div class="subheading mb-3">Redner's Warehouse Markets, Kenhorst PA</div>
-                      <li>Active role in customer service through assistance and communication</li>
-                      <li>Meet deadlines while handling multiple responsibilities and misc tasks</li>
-                  </div>
-                  <div class="resume-date text-md-right">
-                    <span class="text-primary">Part-Time</span></br>
-                      <span class="text-primary">June 2017 to August 2018</span>
                   </div>
               </div>
 
@@ -304,14 +336,14 @@
                                   <i class="fab fa-python"></i>
                               </li>
                           </ul>
-                          <div class="subheading">Python</div>
+                          <div class="subheading">Python & Flask</div>
                           <div>2 years of experience</div>
                       </div>
 
                       <div class="col-sm-4">
                           <ul class="list-inline dev-icons">
                               <li class="list-inline-item">
-                                <i class="fa-solid fa-database"></i>
+                                <i class="fa fa-database"></i>
                               </li>
                           </ul>
                           <div class="subheading">MySQL, SQLite, MongoDB</div>
@@ -326,7 +358,7 @@
                                   <i class="fas fa-code"></i>
                               </li>
                           </ul>
-                          <div class="subheading">Visual Basic &amp; VBA</div>
+                          <div class="subheading">.NET</div>
                           <div>5 years of experience</div>
                       </div>
 
@@ -350,6 +382,39 @@
                           <div>1 year of experience</div>
                       </div>
                   </div>
+
+                  <div class="row mb-5">
+                    <div class="col-sm-4">
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item">
+                                <i class="fa fa-mobile"></i>
+                            </li>
+                        </ul>
+                        <div class="subheading">Swift & SwiftUI</div>
+                        <div>1 year of experience</div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item">
+                                <i class="fa fa-sitemap"></i>
+                            </li>
+                        </ul>
+                        <div class="subheading">Verilog HDL</div>
+                        <div>2 years of experience</div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item">
+                                <i class="fa fa-server"></i>
+                            </li>
+                        </ul>
+                        <div class="subheading">AWS</div>
+                        <div>1 year of experience</div>
+                    </div>
+                </div>
+                  
               </div>
 
               <h3 class="mb-0">Technical  Skills</h3>
