--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                   <a href="mailto:david01rohweder@gmail.com">david01rohweder@gmail.com</a>
               </div>
               <h2 class="about-scroll-text">
-                  <span>I am </span><span class="txt-rotate" data-period="2000" data-rotate='[ "a creator.", "a developer.", "a student.", "a web designer.", "dependable.", "a programmer.", "a leader.", "adaptable." ]'></span>
+                  <span>I am </span><span class="txt-rotate" data-period="2000" data-rotate='[ "ambitious.", "driven.", "a leader.", "adaptable.", "creative." ]'></span>
               </h2>
               <div class="social-icons">
-                  <a href="https://www.linkedin.com/in/david-rohweder-b293081a7" title="LinkedIn">
+                  <a href="https://www.linkedin.com/in/davidrohweder" title="LinkedIn">
                       <i class="fab fa-linkedin-in"></i>
                   </a>
                   <a href="https://github.com/davidrohweder" target="_blank" title="GitHub">
