--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@
                     <h3 class="mb-0">Penn State UNIVERSITY</h3>
                     <div class="subheading mb-3">Bachelors of Science, Computer Science</div>
                     <li>Mathematical skills through linear algebra and matrices (particular skillset in matrix matrix multiplication), multivariable calculus, and statistics</li>
+                    <li>Statistical skills with combinatorics and probability</li>
                     <li>Advanced programming knowledge of Python (Flask framework as well), Java, and C / C++ </li>
                     <li>Rigorous work done with data structures and algorithms such as graphs, heaps, divide and conquer, greedy algorithms, dynamic programming, linear programming, and analysis through proofs</li>
+                    <li>Knowledge of Ai with tree algorithms, neural networks, RNN, TensorFlow, and Keras</li>
                     <li>Experience solving and constructing Lambda Calculus and Scheme, Finate Automata (DFA, NFA, GNFA), Context Free Grammar / Pushdown Automata, and Turing Machines</li>
                     <li>Knowledge and interest in parallel, distributed, and hybrid computation. Familiar with OpenMP and MPI libraries as well as standard threading</li>
                     <li>Knowledge about OS from Parallelization, Memory Allocation (Buddy and Slab algorithms), and Virtual Memory Management</li>
@@ -249,6 +251,7 @@
                     <li>Participated in clubs such as Chess Club and Libraries Ready to Code where I helped teach elementary students the fundamentals of programming as a part of <a href="https://www.birds.cornell.edu/k12/feathered-friends/" target="_blank">Cornell's</a>
                         feathered friend’s project. The project was showed to even younger students to inspire them about the possibilities of coding</li>
                     <li>Received Certificate of Excellence from the Board of School Directors</li>
+                    <li>Received AP Scholar Award for high AP Scores on several AP exams</li>
                     <li>Member of the track and field team</li>
                 </div>
                 <div class="resume-date text-md-right">
