--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <li>Multiple semester Deans List recipient</li>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">Expected graduation in 2023</span>
+                    <span class="text-primary">Graduated in 2023</span>
                 </div>
             </div>
 
