--- a/index.html
+++ b/index.html
@@ -216,9 +216,8 @@
                     <li>Mathematical skills through linear algebra and matrices (particular skill set in matrix matrix multiplication), multi-variable calculus, and statistics</li>
                     <li>Statistical skills with combinatorics, probability, hypothesis testing, linear regression, and confidence intervals</li>
                     <li>Advanced programming knowledge of Python (Flask framework as well), Java, and C / C++ </li>
-                    <li>Artificial intelligence knowledge with trees, reinforcement learning, neural networks, and Rule Based Expert Systems</li>
                     <li>Rigorous work done with data structures and algorithms such as graphs, heaps, divide and conquer, greedy algorithms, dynamic programming, linear programming, and analysis through proofs</li>
-                    <li>Knowledge of Ai with tree algorithms, neural networks, RNN, TensorFlow, and Keras</li>
+                    <li>Knowledge of AI with tree algorithms, neural networks, RNN, TensorFlow, and Keras</li>
                     <li>Experience solving and constructing Lambda Calculus and Scheme, Finite Automata (DFA, NFA, GNFA), Context Free Grammar / Pushdown Automata, and Turing Machines</li>
                     <li>Knowledge and interest in parallel, distributed, and hybrid computation. Familiar with OpenMP and MPI libraries as well as standard threading</li>
                     <li>Knowledge about OS from Parallelization, Memory Allocation (Buddy and Slab algorithms), and Virtual Memory Management</li>
