--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                       <div>Paris on AP Euro Trip</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/newyork.JPG" alt="Third slide">
-                      <div>New York near Christmas</div>
+                      <img class="d-block w-100" src="img/par.jpg" alt="Third slide">
+                      <div>Foodie!</div>
                   </div>
               </div>
               <div class="row mb-5">
