--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <span class="text-primary">Rohweder</span>
               </h1>
               <div class="subheading mb-5">
-                  State College PA · (484) 987-5984 ·
+                  Phoenix Arizona · (484) 987-5984 ·
                   <a href="mailto:david01rohweder@gmail.com">david01rohweder@gmail.com</a>
               </div>
               <h2 class="about-scroll-text">
